WAM-Studio-SF-Build/force-app/main/default/objects/Compliance_Finding__c/Compliance_Finding__c.object-meta.xml
<CustomObject>
    <description>KYC/AML/suitability/surveillance compliance finding. Part of Salesforce Wealth AI Studio.</description>
    <label>Compliance Finding</label>
    <nameField>
        <displayFormat>CMP-{00000}</displayFormat>
        <label>Compliance Finding Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Compliance Findings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>