WAM-Studio-SF-Build/force-app/main/default/objects/Compliance_Finding__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Compliance Findings</relationshipLabel>
    <relationshipName>Compliance_Findings</relationshipName>
    <type>Lookup</type>
</CustomField>