WAM-Studio-SF-Build/force-app/main/default/objects/Compliance_Finding__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Compliance Findings</relationshipLabel>
    <relationshipName>Compliance_Findings</relationshipName>
    <type>Lookup</type>
</CustomField>