WAM-Studio-SF-Build/force-app/main/default/objects/Compliance_Finding__c/fields/Finding_Type__c.field-meta.xml
<CustomField>
    <fullName>Finding_Type__c</fullName>
    <label>Finding Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>KYC</fullName><default>true</default><label>KYC</label></value>
            <value><fullName>AML</fullName><default>false</default><label>AML</label></value>
            <value><fullName>Suitability</fullName><default>false</default><label>Suitability</label></value>
            <value><fullName>Surveillance</fullName><default>false</default><label>Surveillance</label></value>
            <value><fullName>Regulatory</fullName><default>false</default><label>Regulatory</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>