WAM-Studio-SF-Build/force-app/main/default/objects/Compliance_Finding__c/fields/Reason_Detail__c.field-meta.xml
<CustomField>
    <fullName>Reason_Detail__c</fullName>
    <label>Reason Detail</label>
    <description>Human-readable explanation of why this compliance finding was raised.</description>
    <inlineHelpText>Why this finding was flagged — the specific condition or policy trigger.</inlineHelpText>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>