WAM-Studio-SF-Build/force-app/main/default/objects/Compliance_Finding__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Open</fullName><default>true</default><label>Open</label></value>
            <value><fullName>Under Review</fullName><default>false</default><label>Under Review</label></value>
            <value><fullName>Cleared</fullName><default>false</default><label>Cleared</label></value>
            <value><fullName>Escalated</fullName><default>false</default><label>Escalated</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>